--- a/src/public/sass/_sectors-overview.scss
+++ b/src/public/sass/_sectors-overview.scss
@@ -67,6 +67,7 @@
 .sector-teams-list_team_cell--target-value {
 	width: 15%;
 	text-align: right;
+	padding-bottom: 20px; //padding for the progress bar to line up the text
 }
 
 .sector-teams-list_team_cell--value-percentage {
